updates to links

--- a/layouts/partials/menus/main-menu.html
+++ b/layouts/partials/menus/main-menu.html
@@ -14,7 +14,7 @@
 {{ end }}
 
 <div class="navbar-item has-dropdown is-hoverable">
-  <a href="./contact" class="navbar-item">Be Social</a>
+  <a href="/contact" class="navbar-item">Be Social</a>
   <div class="navbar-dropdown is-right labs-mobile-dropdown">
     {{- partial "menus/socials-menu.html" . -}}
   </div>
