--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
                     </h2>
                     <div class="buttons is-centered">
                       <button class="button is-black is-outlined">Donate</button>
-                      <a href="get-involved.html" class="button is-black is-outlined"><span>Volunteer</span></a>
+                      <a href="/get-involved" class="button is-black is-outlined"><span>Volunteer</span></a>
                       <a href="https://slack.801labs.org" class="button is-black is-outlined"><span>Join Slack</span></a>
                     </div>
                   </div>
@@ -37,14 +37,14 @@
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website" class="button is-white is-outlined">
                 <span>Donate</span>
               </a>
-              <a href="/get-involved/" class="button is-white is-outlined">
+              <a href="/get-involved" class="button is-white is-outlined">
                 <span>Volunteer</span>
               </a>
               <a href="https://slack.801labs.org" class="button is-white is-outlined">
                 <span>Join Slack</span>
               </a>
             </div>
-            
+
             <div class="labs-scroll">
               <span class="labs-arrow">&darr;</span>
               scroll down a little more
