fixed links and svg

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,6 @@
   </div>
 </footer>
 
-<script src="{{ "js/script.js" | absURL }}" charset="utf-8"></script>
+<script src="{{ "js/script.js" | relURL }}" charset="utf-8"></script>
 </body>
 </html>
