--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,5 +7,5 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link href="{{ "css/style.css" | absURL }}" rel="stylesheet" type="text/css">
+    <link href="{{ "css/style.css" | relURL }}" rel="stylesheet" type="text/css">
 </head>
