--- a/layouts/shortcodes/socials.html
+++ b/layouts/shortcodes/socials.html
@@ -1,7 +1,7 @@
 {{ range .Site.Menus.social.ByWeight }}
-  <a href="{{ .URL }}" class="navbar-item">
+  <a href="{{ .URL }}">
     <span class="icon is-medium">
-      <i class="fas {{ .Pre }}"></i>
+      {{ .Pre }}
     </span>
     {{ .Name }}
   </a>
