paypal links and favicon

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,4 +8,5 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="{{ "css/style.css" | relURL }}" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="favicon.png">
 </head>
