--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,7 +20,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website" class="button is-dark">
+          <a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
             <span class="icon">
               <i class="fab fa-paypal"></i>
             </span>
