--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,7 +34,7 @@
             </h2>
 
             <div class="buttons">
-              <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=BWV8WFGYAEECN&source=website" class="button is-white is-outlined">
+              <a href="{{ .Site.Params.paypalLink }}" class="button is-white is-outlined">
                 <span>Donate</span>
               </a>
               <a href="/get-involved" class="button is-white is-outlined">
