--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,11 @@
 <footer class="footer">
   <div class="content has-text-centered">
+    <div>
+      801 Labs hackerspace is a [pending] public 501(c)(3) that is open to the public!
+    </div>
+    <address>
+      353 East 200 South Suite #B, Salt Lake City, UT 84111
+    </address>
     {{- partial "menus/footer-menu.html" . -}}
   </div>
 </footer>
