--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,6 +32,9 @@
             </span>
             <span>Join Slack</span>
           </a>
+          <a href="/location-and-hours/" class="button is-black is-outlined">
+            <span>Visit us!</span>
+          </a>
         </div>
       </div>
     </div>
