fixed md file rendering

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
     <main aria-role="main">
       <div class="homepage-content">
-        <!-- content/_index.html -->
-        {{.Content}}
+
+        {{- partial "content.html" . -}}
+
       </div>
     </main>
 {{ end }}
