--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <!-- content/_index.html -->
-        {{.Content}}
+        {{- partial "content.html" . -}}
       </div>
     </main>
 {{ end }}
