added a few styling changes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,9 +46,9 @@
             </div>
 
             <div class="labs-scroll">
-              <span class="labs-arrow">&darr;</span>
-              scroll down a little more
-              <span class="labs-arrow">&darr;</span>
+              <span class="labs-arrow left">&darr;</span>
+              <a href="#answers" class="homepage scroll-btn">scroll down a little more</a>
+              <span class="labs-arrow right">&darr;</span>
             </div>
           </div>
         </div>
