--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
                     </h2>
                     <div class="buttons is-centered">
                       <button class="button is-black is-outlined">Donate</button>
-                      <a href="{{< ref "/volunteer" >}}" class="button is-black is-outlined"><span>Volunteer</span></a>
+                      <a href="/volunteer" class="button is-black is-outlined"><span>Volunteer</span></a>
                       <a href="https://slack.801labs.org" class="button is-black is-outlined"><span>Join Slack</span></a>
                     </div>
                   </div>
@@ -37,7 +37,7 @@
               <a href="{{ .Site.Params.paypalLink }}" class="button is-white is-outlined">
                 <span>Donate</span>
               </a>
-              <a href="{{< ref "/volunteer" >}}" class="button is-white is-outlined">
+              <a href="/volunteer/" class="button is-white is-outlined">
                 <span>Volunteer</span>
               </a>
               <a href="https://slack.801labs.org" class="button is-white is-outlined">
