--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
         <section class="section is-hidden-tablet">
                   <div class="content has-text-centered">
                     <h2 class="subtitle">
-                      A Community Hackerspace for Information Technology, Electronics, and Information Security Enthusiasts
+                      A Community Hackerspace focused on Education for Information Technology, Electronics, and Information Security Enthusiasts
                     </h2>
                     <div class="buttons is-centered">
                       <a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
