--- a/layouts/index.html
+++ b/layouts/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="column has-text-left">
             <h2 class="subtitle">
-              A Community Hackerspace for Information Technology, Electronics, and Information Security Enthusiasts
+               Community Hackerspace focused on Education for Information Technology, Electronics, and Information Security Enthusiasts
             </h2>
 
             <div class="buttons">
