--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,12 +20,12 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
+          <!--<a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
             <span class="icon">
               <i class="fab fa-paypal"></i>
             </span>
             <span>Donate</span>
-          </a>
+          </a>-->
           <a href="https://slack.801labs.org" class="button is-black is-outlined">
             <span class="icon">
               <i class="fab fa-slack"></i>
