remove moooore donate

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,12 +9,12 @@
                       A Community Hackerspace focused on Education for Information Technology, Electronics, and Information Security Enthusiasts
                     </h2>
                     <div class="buttons is-centered">
-                      <a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
+                      <!--<a href="{{ .Site.Params.paypalLink }}" class="button is-dark">
                         <span class="icon">
                           <i class="fab fa-paypal"></i>
                         </span>
                         <span>Donate</span>
-                      </a>
+                      </a>-->
                       <a href="/volunteer/" class="button is-black is-outlined">
                         <span class="icon">
                           <i class="fas fa-hands"></i>
@@ -53,9 +53,9 @@
             </h2>
 
             <div class="buttons">
-              <a href="{{ .Site.Params.paypalLink }}" class="button is-white is-outlined">
+              <!--<a href="{{ .Site.Params.paypalLink }}" class="button is-white is-outlined">
                 <span>Donate</span>
-              </a>
+              </a>-->
               <a href="/volunteer/" class="button is-white is-outlined">
                 <span>Volunteer</span>
               </a>
