--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,11 +21,11 @@
                         </span>
                         <span>Volunteer</span>
                       </a>
-                      <a href="https://slack.801labs.org" class="button is-black is-outlined">
+                      <a href="{{ .Site.Params.chatLink }}" class="button is-black is-outlined">
                         <span class="icon">
-                          <i class="fab fa-slack"></i>
+                          <i class="fab {{ .Site.Params.chatIcon }}"></i>
                         </span>
-                        <span>Join Slack</span>
+                        <span>Join {{ .Site.Params.chatName }}</span>
                       </a>
                       <a href="/location-and-hours/" class="button is-black is-outlined">
                         <span class="icon">
@@ -59,8 +59,8 @@
               <a href="/volunteer/" class="button is-white is-outlined">
                 <span>Volunteer</span>
               </a>
-              <a href="https://slack.801labs.org" class="button is-white is-outlined">
-                <span>Join Slack</span>
+              <a href="{{ .Site.Params.chatLink }}" class="button is-white is-outlined">
+                <span>Join {{ .Site.Params.chatName }}</span>
               </a>
             </div>
 
