--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
       801Labs is a 501(c)(3) charitable non-profit organization!
     </div>
     <address>
-      353 East 200 South Suite #B, Salt Lake City, UT 84111
+      353 East 200 South Suite #201, Salt Lake City, UT 84111
     </address>
     {{- partial "menus/footer-menu.html" . -}}
   </div>
